This should fix icon sizing issues on iPhone.

--- a/docs/assets/css/site.css
+++ b/docs/assets/css/site.css
@@ -86,6 +86,7 @@ nav {
 
       &.social {
         float: right;
+        margin-right: 0;
       }
     }
   }
@@ -122,7 +123,7 @@ nav {
 }
 
 img.logo {
-  height: 20px;
+  height: 1.25rem;
 }
 
 div.header-image {
